# ddis

./: .gitignore  AGENTS.md  PROPOSED_FILE_REORGANIZATION_PLAN.md  README.md  ddis_assemble.sh  ddis_final.md  ddis_modularization_protocol.md  ddis_ralph_loop.sh  ddis_ralph_readme.md  ddis_recursive_improvement_prompt.md  ddis_validate.sh  kickoff_prompt.md
ddis-braid/: ADRS.md  AGENTS.md  Cargo.toml  DEFECT_SPEC.md  FAILURE_MODES.md  GAP_ANALYSIS.md  HARVEST.md  IMPLEMENTATION_GUIDE.md  SEED.md  SPEC.md  install.sh  rustc-ice-2026-03-28T18_00_46-86576.txt
ddis-braid/.beads/: issues.jsonl
ddis-braid/.braid/: AGENTS.md  genesis.edn
ddis-braid/.github/workflows/: ci.yml  kani.yml
ddis-braid/audits/stage-0/: R6-divergence-catalog-update.md  R7-consistency-scan.md  R7-crossref-coherence.md  R7-namespace-readiness.md  V1_AUDIT_3-3-2026.md  V1_AUDIT_TRIAGE.md  divergence-resolution-matrix.md  phantom-type-audit.md  wave1-findings-resolution.md
ddis-braid/braid/: Cargo.toml
ddis-braid/braid-kernel/: Cargo.toml
ddis-braid/braid-kernel/src/: agent_md.rs  claude_md.rs  datom.rs  error.rs  guidance.rs  harvest.rs  kani_proofs.rs  layout.rs  lib.rs  merge.rs  schema.rs  (+6 more)
ddis-braid/docs/: AUDIT_PROMPT.md  HARVEST.md  README.md  session-047-prompt.md
ddis-braid/guide/: 00-architecture.md  01-store.md  01b-storage-layout.md  02-schema.md  03-query.md  04-resolution.md  05-harvest.md  06-seed.md  07-merge-basic.md  08-guidance.md  09-interface.md  10-verification.md  11-worked-examples.md  12-stages-1-4.md  13-trilateral.md  README.md  types.md
ddis-braid/references/: AGENTIC_SYSTEMS_FORMAL_ANALYSIS.md  BRAID_IDEATION_TRANSCRIPT.md  DATOMIC_IN_RUST.md
ddis-braid/scripts/: dogfood_agent_a_prompt.md  dogfood_agent_b_prompt.md  dogfood_agent_c_prompt.md  e2e_acp.sh  e2e_agent_workflow.sh  e2e_ambient_reconciliation.sh  e2e_calibrating_threshold.sh  e2e_concept_crystallization.sh  e2e_contextual_observation.sh  e2e_convergence_three_session.sh  e2e_daemon.sh  e2e_daemon_write.sh  e2e_dogfood_tensions.sh  e2e_external_project.sh  e2e_frontier_steering.sh  e2e_guidance.sh  e2e_harvest_seed.sh  e2e_harvest_urgency.sh  e2e_inquiry_engine.sh  e2e_livestore.sh  e2e_llm_surface.sh  e2e_policy_manifest.sh  e2e_session_lifecycle.sh  e2e_signal_routing.sh  e2e_stage0_lifecycle.sh  e2e_steering_loop.sh  e2e_store_performance.sh  e2e_task_ergonomics.sh  e2e_topology_quick.sh  e2e_tsv_output.sh  e2e_verification_bootstrap.sh  e2e_witness.sh
ddis-braid/spec/: 00-preamble.md  01-store.md  01b-storage-layout.md  02-schema.md  03-query.md  04-resolution.md  05-harvest.md  06-seed.md  07-merge.md  08-sync.md  09-signal.md  10-bilateral.md  11-deliberation.md  12-guidance.md  13-budget.md  14-interface.md  15-uncertainty.md  16-verification.md  17-crossref.md  18-trilateral.md  19-topology.md  20-coherence.md  21-witness.md  22-reflexive.md  23-ferratomic.md  README.md  ferratomic
ddis-braid/transcripts/: 02-datom-store-query-patterns.md  03-agent-protocol-convergence-analysis.md  06-ddis-seed-document-coherence-verification.md  2026-03-01-19-53-11-datomic-rust-crdt-spec-foundation.txt  2026-03-01-21-53-41-agent-protocol-convergence-analysis.txt  2026-03-01-23-03-50-ddis-implementation-roadmap-dynamic-claude-md.txt  journal.txt
(+677 files in other folders)
