[workspace]
resolver = "2"
members = ["crates/braid-kernel", "crates/braid"]

[workspace.package]
edition = "2021"
rust-version = "1.91"

# Optimize in dev builds — eigendecomposition, graph algorithms,
# and entity resolution are unusable without optimization on stores with > 100 entities.
[profile.dev]
opt-level = 2

[workspace.dependencies]
blake3 = "1"
ordered-float = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
