[package]
name = "braid-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
