[package]
name = "braid"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
braid-kernel = { path = "../braid-kernel" }
blake3 = { workspace = true }
clap = { version = "4", features = ["derive"] }
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "braid"
path = "src/main.rs"
