[package]
name = "braid-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = ["stage0"]
stage0 = []
stage1 = ["stage0"]
stage2 = ["stage1"]
stage3 = ["stage2"]

[dependencies]
blake3 = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
stateright = "0.31.0"
