[package]
name = "braid"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["stage0"]
stage0 = ["braid-kernel/stage0"]
stage1 = ["stage0", "braid-kernel/stage1"]
stage2 = ["stage1", "braid-kernel/stage2"]
stage3 = ["stage2", "braid-kernel/stage3"]

[dependencies]
braid-kernel = { path = "../braid-kernel" }
bincode = "1"
blake3 = { workspace = true }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "braid"
path = "src/main.rs"
